[package]
name = "link-checker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "link-checker"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
reqwest = { version = "0.11" }
tokio = { version = "1.21.2", features = ["full"] }
regex = "1.7.0"

